--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     /** GridLayout */
     implementation "androidx.gridlayout:gridlayout:1.0.0"
 
+    /** TimaTableView */
+    implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
