--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    /** Logging-Interceptor */
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
     /** Lottie 애니메이션 */
     // https://mvnrepository.com/artifact/com.airbnb.android/lottie
     implementation 'com.airbnb.android:lottie:5.2.0'
