UPDATE : 실습실별 시간표 조회 기능 구현(최적화 필요) + TimeTableView 커스텀

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     /** GridLayout */
     implementation "androidx.gridlayout:gridlayout:1.0.0"
 
-    /** TimaTableView */
+    /** TimeTableView */
     implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
 
     testImplementation 'junit:junit:4.13.2'
