--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     /** TimeTableView */
     implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
 
+    /** SwipRefershLayout */
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
