--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:theme="@style/Theme.LAB"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".view.activity.SignUpActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".view.activity.SignUpActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".view.activity.TokenActivity"
             android:exported="false" />
