FIXED : 로그인 액티비티에서 버튼이 키보드 따라 올라오는 문제 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:exported="false" />
         <activity
             android:name=".view.activity.LoginActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="false" />
         <activity
             android:name=".view.activity.IntroActivity"
